--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
 REACT_APP_API_URL=http://localhost:8000
+
+PUBLIC_URL=https://sdn-host.net/public/
+
+CDN_HOST=some-ftp-host.com
+CDN_LOGIN=gitcom
+CDN_PASSWORD=your-password
